fix: improve accessibility visibility-sr-only class

--- a/src/utilities/visibility.scss
+++ b/src/utilities/visibility.scss
@@ -11,9 +11,11 @@ $visibility: (
 
 // Text for screen readers only
 @include mixins.classWithBreakpoints('visibility-sr-only') {
-  display: block;
-  width: 0;
-  height: 0;
-  margin: 0;
+  clip-path: inset(100%);
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
   overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
